# WebServer

./: .gitignore  CMakeLists.txt  DefaultConfig.conf  HTTPerrorCodes.hpp  Makefile  README.md  SocketHandler.cpp  SocketHandler.hpp  TestConfig.conf  WebServ  chunk.py  chunked_request.py  error  garbage.py  main.cpp  output.txt  test.txt  textTest.txt  webserv
.github/workflows/: github-actions-demo.yml
badPlans/: SocketHandler.cpp  SocketHandler.hpp
config/: 307redir.conf  DefaultConfig.conf  errorPages.conf  incorrect.conf  manyServer.conf  redir.conf  samePort.conf  siegeConfig.conf  siegeCongif.conf
config/invalidConfig/: brokenincorrect.conf  incorrect.conf  incorrect_identical.conf
defaults/: 400.html  401.html  403.html  500.html  502.html  504.html  index.html  uploads.html
resources/: test.txt
src/: Color.hpp  HTTPerrorCodes.hpp  Socket.cpp  Socket.hpp  SocketHandler.cpp  SocketHandler.hpp  main.cpp
src/Request/: Request.hpp
src/WebServ/: CgiHandler.hpp  DefaultConfig.conf  WebServ.cpp  WebServ.hpp  WebServerProg.cpp  WebServerProg.hpp  api_delete.cpp  api_get.cpp  api_helpers.cpp  api_helpers.hpp  api_post.cpp  api_post.hpp  cgiHandler.cpp  constants.hpp  directoryListing.cpp  parser.cpp  request.cpp  utils.cpp  utils.hpp  validateServers.cpp
src/cgi-bin/: cgiHandler.cpp  cgiPerl.perl  fileUpload.py  form.py  form.sh  hello_world.py  (+2 more)
test/: errorCgi.html  fileUploadFail.html  file_get_delete.html  form.html  index.html  index_delete.html  siegeTest.html  textTest.txt  upload.html
uploads/: main (1).cpp  main.cpp  test.txt  testUpload.txt
(+14 files in other folders)
